[package]
license = "MIT OR Apache-2.0"
name = "crcnt_ddd"
description = "CRCNT DDD Basic Objects"
homepage = "https://github.com/CRCNT/crcnt_ddd/tree/main/ddd"
documentation = "https://github.com/CRCNT/crcnt_ddd/tree/main/ddd"
repository = "https://github.com/CRCNT/crcnt_ddd/tree/main/ddd"
readme = "README.md"
version = "0.2.1"
edition = "2021"

[lib]
name = "crcnt_ddd"
path = "src/lib.rs"

[dependencies]
#crcnt_ddd_macros = {path = "../macros"}
crcnt_ddd_macros = "0.2"
chrono = "0.4"
serde = {version = "1.0", features=["derive"]}

[dependencies.mysql_common]
version = "0.29"
features = ["chrono"]
