[package]
license = "MIT OR Apache-2.0"
name = "crcnt_ddd_macros"
description = "CRCNT DDD Basic Macro"
homepage = "https://github.com/CRCNT/crcnt_ddd/tree/main/macros"
documentation = "https://github.com/CRCNT/crcnt_ddd/tree/main/macros"
repository = "https://github.com/CRCNT/crcnt_ddd/tree/main/macros"
readme = "README.md"
version = "0.2.7"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "crcnt_ddd_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0", features=["full", "fold", "derive"]}
quote = "1.0"
convert_case = "0.6"
toml = "0.5"
serde = {version = "1.0", features = ["derive"]}
